// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders display layouts renders the layout with a table 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bg-info rounded container"
      >
        <h1
          class="text-start text-light"
        >
          Hello 
          ebook
        </h1>
        <p>
          We're looking, but haven't found anything yet :/
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-info rounded container"
    >
      <h1
        class="text-start text-light"
      >
        Hello 
        ebook
      </h1>
      <p>
        We're looking, but haven't found anything yet :/
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders display layouts renders the layout with rectangle cards 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bg-secondary rounded container"
      >
        <h1
          class="text-start text-light"
        >
          Hello 
          movie
        </h1>
        <p>
          We're looking, but haven't found anything yet :/
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-secondary rounded container"
    >
      <h1
        class="text-start text-light"
      >
        Hello 
        movie
      </h1>
      <p>
        We're looking, but haven't found anything yet :/
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders display layouts renders the layout with square cards 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bg-warning rounded container"
      >
        <h1
          class="text-start text-light"
        >
          Hello 
          software
        </h1>
        <p>
          We're looking, but haven't found anything yet :/
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-warning rounded container"
    >
      <h1
        class="text-start text-light"
      >
        Hello 
        software
      </h1>
      <p>
        We're looking, but haven't found anything yet :/
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders successful fetch call and display layouts renders the layout with a table 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bg-info rounded container"
      >
        <h1
          class="text-start text-light"
        >
          Hello 
          ebook
        </h1>
        <p>
          We're looking, but haven't found anything yet :/
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-info rounded container"
    >
      <h1
        class="text-start text-light"
      >
        Hello 
        ebook
      </h1>
      <p>
        We're looking, but haven't found anything yet :/
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders successful fetch call and display layouts renders the layout with rectangle cards 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bg-secondary rounded container"
      >
        <h1
          class="text-start text-light"
        >
          Hello 
          movie
        </h1>
        <p>
          We're looking, but haven't found anything yet :/
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-secondary rounded container"
    >
      <h1
        class="text-start text-light"
      >
        Hello 
        movie
      </h1>
      <p>
        We're looking, but haven't found anything yet :/
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders successful fetch call and display layouts renders the layout with square cards 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bg-warning rounded container"
      >
        <h1
          class="text-start text-light"
        >
          Hello 
          software
        </h1>
        <p>
          We're looking, but haven't found anything yet :/
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-warning rounded container"
    >
      <h1
        class="text-start text-light"
      >
        Hello 
        software
      </h1>
      <p>
        We're looking, but haven't found anything yet :/
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders the navigation bar 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pt-4 border rounded mx-auto my-3 container"
      >
        <div
          class="mb-4 row"
        >
          <div
            class="col"
          >
            <input
              class="form-control"
            />
          </div>
          <div
            class="col"
          >
            <select
              class="form-select"
            >
              <option>
                Search by name
              </option>
            </select>
          </div>
        </div>
        <div
          class="nav nav-tabs nav-fill"
        >
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="all"
              href="#"
              role="button"
              tabindex="0"
            >
              All
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="Movies"
              href="#"
              role="button"
              tabindex="0"
            >
              Movies
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="Podcasts"
              href="#"
              role="button"
              tabindex="0"
            >
              Podcasts
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="Music"
              href="#"
              role="button"
              tabindex="0"
            >
              Music
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="Audiobooks"
              href="#"
              role="button"
              tabindex="0"
            >
              Audiobooks
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="ShortFilms"
              href="#"
              role="button"
              tabindex="0"
            >
              Short films
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="TVShows"
              href="#"
              role="button"
              tabindex="0"
            >
              TV shows
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="Software"
              href="#"
              role="button"
              tabindex="0"
            >
              Software
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="Ebooks"
              href="#"
              role="button"
              tabindex="0"
            >
              E books
            </a>
          </div>
          <div
            class="nav-item"
          >
            <a
              class="nav-link"
              data-rr-ui-event-key="Favourites"
              href="#"
              role="button"
              tabindex="0"
            >
              Favourites
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pt-4 border rounded mx-auto my-3 container"
    >
      <div
        class="mb-4 row"
      >
        <div
          class="col"
        >
          <input
            class="form-control"
          />
        </div>
        <div
          class="col"
        >
          <select
            class="form-select"
          >
            <option>
              Search by name
            </option>
          </select>
        </div>
      </div>
      <div
        class="nav nav-tabs nav-fill"
      >
        <div
          class="nav-item"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="all"
            href="#"
            role="button"
            tabindex="0"
          >
            All
          </a>
        </div>
        <div
          class="nav-item"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="Movies"
            href="#"
            role="button"
            tabindex="0"
          >
            Movies
          </a>
        </div>
        <div
          class="nav-item"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="Podcasts"
            href="#"
            role="button"
            tabindex="0"
          >
            Podcasts
          </a>
        </div>
        <div
          class="nav-item"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="Music"
            href="#"
            role="button"
            tabindex="0"
          >
            Music
          </a>
        </div>
        <div
          class="nav-item"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="Audiobooks"
            href="#"
            role="button"
            tabindex="0"
          >
            Audiobooks
          </a>
        </div>
        <div
          class="nav-item"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="ShortFilms"
            href="#"
            role="button"
            tabindex="0"
          >
            Short films
          </a>
        </div>
        <div
          class="nav-item"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="TVShows"
            href="#"
            role="button"
            tabindex="0"
          >
            TV shows
          </a>
        </div>
        <div
          class="nav-item"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="Software"
            href="#"
            role="button"
            tabindex="0"
          >
            Software
          </a>
        </div>
        <div
          class="nav-item"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="Ebooks"
            href="#"
            role="button"
            tabindex="0"
          >
            E books
          </a>
        </div>
        <div
          class="nav-item"
        >
          <a
            class="nav-link"
            data-rr-ui-event-key="Favourites"
            href="#"
            role="button"
            tabindex="0"
          >
            Favourites
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
